--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -15,7 +15,7 @@
 	],
 
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
-	// "forwardPorts": [8501],
+	"forwardPorts": [8501],
 
 	// Uncomment the next line to run commands after the container is created - for example
 	// "postCreateCommand": "apt-get update && apt-get install -y pip",
